--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">noteTest</string>
     <string name="action_settings">Settings</string>
+    <string name="front_deck">Front</string>
+    <string name="back_Deck">Back</string>
 </resources>
