App name change from "noteTest" to "Kojeal Notes"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">noteTest</string>
+    <string name="app_name">Kojeal Notes</string>
     <string name="action_settings">Settings</string>
     <string name="front_deck">Front</string>
     <string name="back_Deck">Back</string>
