--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="cancel_button">Cancel</string>
     <string name="save_button">Save</string>
     <string name="enter_text">Enter Text</string>
+    <string name="kojeal_notes">Kojeal Notes</string>
 </resources>
