--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="save_button">Save</string>
     <string name="enter_text">Enter Text</string>
     <string name="kojeal_notes">Kojeal Notes</string>
+    <string name="change_text">Change Text</string>
 </resources>
